# olaf

./: .firebaserc  .gitignore  README.md  docker-compose.yml  firebase.json  firestore.rules  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  cloudbuild.yaml  config.py  env.yaml  main.py  pyproject.toml
backend/api/: __init__.py
backend/api/middleware/: __init__.py  firebase_auth.py
backend/api/routes/: __init__.py  alerts.py  auth.py  companion.py  companion_stream.py  conversations.py  gemini_token.py  health.py  navigator.py  notifications.py  storyteller.py
backend/caria_agents/: agent.py
backend/caria_agents/agents/: __init__.py  alert.py  navigator.py  storyteller.py
backend/caria_agents/callbacks/: __init__.py  navigator_guard.py  safety.py
backend/caria_agents/instructions/: __init__.py  alert.py  coordinator.py  navigator.py  storyteller.py
backend/caria_agents/tools/: __init__.py  alert_tools.py  companion_tools.py  navigator_templates.py  navigator_tools.py  storyteller_tools.py
backend/models/: __init__.py  api.py  firestore.py
backend/olaf_agents/: __init__.py  agent.py
backend/olaf_agents/agents/: __init__.py  alert.py  companion.py  navigator.py  storyteller.py
backend/olaf_agents/callbacks/: __init__.py  navigator_guard.py  safety.py
backend/scripts/: clear_firestore.py  get_token.py  seed_dummy_data.py  test_features.py
backend/services/: __init__.py  browser_service.py  fcm_service.py  firestore_service.py  imagen_service.py  navigator_session.py
backend/tests/: conftest.py
(+109 files in other folders)
